# nfitsview

./: CMakeLists.txt  README.md  aboutdialog.cpp  aboutdialog.h  aboutdialog.ui  defsui.h  fitsimagelabel.cpp  fitsimagelabel.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  qfitsimagelabel.cpp  qfitsimagelabel.h  resources.qrc  winappicon.rc  workspacetabwidget.cpp  workspacetabwidget.h  workspacetabwidget.ui
libnfits/: defs.h  fits2png.cpp  fits2png.h  fitsfile.cpp  fitsfile.h  hdu.cpp  hdu.h  header.cpp  header.h  headerrecord.cpp  headerrecord.h  helperfunctions.cpp  helperfunctions.h  helperio.cpp  helperio.h  image.cpp  image.h  keywords.h  pngfile.cpp  pngfile.h  table.cpp  table.h
updatemanager/: filedownloader.cpp  filedownloader.h  updatechecker.cpp  updatechecker.h
